2023-06-05 Albert Chu <chu11@llnl.gov>

	* ipmi-oem: Remove legacy Dell get-system-info "slot-number" key.
	Users should use "blade-slot-info".

	* bmc-watchdog: remove legacy --logfile option and config
	file support.

	* libfreeipmi: remove legacy Dell macro from reverse engineering attempt.

2023-06-02 Albert Chu <chu11@llnl.gov>

	* libfreeipmi: Fix typo.

2023-05-15 Albert Chu <chu11@llnl.gov>

	* libfreeipmi, libipmimonitoring: Fix various function and macro
	typos

2023-05-15 Albert Chu <chu11@llnl.gov>

	* doc, man: fix a number of typos

	* bmc-device, ipmi-fru, ipmi-oem: Fix several output typos

	* global: Fix various comment / doc typos.

	* contrib/pet/petalert.pl: Change output error message typo.

	* libfreeipmi/include/freeipmi/sel/ipmi-sel.h: Fix typo in
	function prototype parameter.

	* libfreeipmi/include/freeipmi/spec/ipmi-rmcpplus-status-spec.h:
	Fix typo in error message string.

	* libfreeipmi/sel/ipmi-sel-string-intel-windmill.c
	(sel_string_output_intel_windmill_event_data1_class_sensor_specific_discrete),
	libfreeipmi/util/ipmi-sensor-and-event-code-tables-util.c
	(ipmi_get_oem_sensor_type_message): Fix output typos.

2023-05-12 Albert Chu <chu11@llnl.gov>

	* ipmiseld/ipmiseld-ipmi-communication.c (ipmiseld_ipmi_setup),
	ipmiseld/ipmiseld-cache.c (ipmiseld_sdr_cache_create_and_load):
	Set initialized pointers to NULL to avoid double free when
	_ipmiseld_poll() exits.

2023-03-29 Albert Chu <chu11@llnl.gov>

	* ipmi-config/ipmi-config-category-core-rmcpplus-conf-privilege-section.c:
	support config Maximum_Privilege_Cipher_Suite_Id_16

2022-11-08 Christian Kohn <chris.kohn@amd.com>

	* libfreeipmi, ipmi-fru: Support xilinx OEM fru records.

2022-11-08 Albert Chu <chu11@llnl.gov>

	* libfreeipmi/include/freeipmi/spec/ipmi-iana-enterprise-numbers-spec.h:
	Fix comment typo.

2022-11-04 Sam James <sam@gentoo.org>

	* configure.ac: Fix various portability to clang.

2022-11-02 Fabrice Fontaine <fontaine.fabrice@gmail.com>
