@@ -1,11 +1,11 @@
 #!/bin/bash
 
-rm enterprise-numbers
-wget http://www.iana.org/assignments/enterprise-numbers
-./enterprise-numbers.pl enterprise-numbers > ipmi-iana-enterprise-numbers-spec.c
+rm -f enterprise-numbers.txt
+wget http://www.iana.org/assignments/enterprise-numbers.txt
+./enterprise-numbers.pl enterprise-numbers.txt > ipmi-iana-enterprise-numbers-spec.c
 
 # Determine max index, last 30 lines of the file is sufficient
-output=`tail -n 30 enterprise-numbers`
+output=`tail -n 30 enterprise-numbers.txt`
 max=0
 for i in $output
 do
