@@ -1,5 +1,9 @@
 2023-06-05 Albert Chu <chu11@llnl.gov>
 
+	* libfreeipmi/spec: Update enterprise numbers scripts
+
+2023-06-05 Albert Chu <chu11@llnl.gov>
+
 	* ipmi-oem: Remove legacy Dell get-system-info "slot-number" key.
 	Users should use "blade-slot-info".
 
